2010-07-28  Dominic Mazzoni  <dmazzoni@google.com>

        Reviewed by Dimitri Glazkov.

        Add a missing dependency.
        https://bugs.webkit.org/show_bug.cgi?id=43044

        * css/CSSPrimitiveValueMappings.h:

2010-07-28  Alex Nicolaou  <anicolao@chromium.org>

        Reviewed by Ojan Vafai.

        Set incorrect but close expectations for mask-colorspace.svg on mac
        https://bugs.webkit.org/show_bug.cgi?id=43102

        Blocks:
          [chromium] r63450 caused some svg mask tests to fail pixel tests
          https://bugs.webkit.org/show_bug.cgi?id=42403

        ImageBufferCG.cpp uses CoreGraphics to do the transform of SVG masks
        into LinearRGB, but only for MAC which means not for CHROMIUM, so I
        have changed the #if to account for both platforms. I am assuming this
        isn't in for windows because it's missing in CG itself, but I didn't
        verify that.

        * platform/graphics/cg/ImageBufferCG.cpp:
        (WebCore::ImageBuffer::ImageBuffer):

2010-07-28  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Improve read-only arrow button appearance
        https://bugs.webkit.org/show_bug.cgi?id=43108

        No new tests. This is a fix for fast/forms/
        input-appearance-spinbutton-disabled-readonly.html

        * platform/chromium/PlatformThemeChromiumGtk.cpp:
        (WebCore::PlatformThemeChromiumGtk::paintArrowButton):
        If the button has ReadOnlyState, paint the button as same as it is disabled.

2010-07-28  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        implement getData('text/html') for webkit win
        https://bugs.webkit.org/show_bug.cgi?id=37981

        * platform/win/ClipboardUtilitiesWin.cpp:
        (WebCore::extractMarkupFromCFHTML):
        (WebCore::getCFHTML):
        (WebCore::fragmentFromCFHTML):
        (WebCore::fragmentFromHTML):
        * platform/win/ClipboardUtilitiesWin.h: