@@ -1,3 +1,12 @@
+2010-07-28  Bryan Gislason  <bgislason@rim.com>
+
+        Reviewed by Nate Chapin.
+
+        Minor compile errors in loadMediaPlayerProxyPlugin
+        https://bugs.webkit.org/show_bug.cgi?id=43141
+
+        * WebCore/loader/SubframeLoader.cpp:
+
 2010-07-28  Dominic Mazzoni  <dmazzoni@google.com>
 
         Reviewed by Dimitri Glazkov.
